...
import styled from 'styled-components/native';
import useSettlement from './hooks';

type PrincipleKey = 'newLife' | 'death' | 'conviction' | 'society';

const PRINCIPLES: {label: string; key: PrincipleKey}[] = [
  {label: 'New Life', key: 'newLife'},
  {label: 'Death', key: 'death'},
  {label: 'Conviction', key: 'conviction'},
  {label: 'Society', key: 'society'},
];

const Component = () => {
  const {props, actions} = useSettlement();

  return (
    <Screen testID="SettlementScreen">
      <Preview
        height="240px"
        testID="Preview"
        uri={props.preview?.imageUrl}
        imageHeight="360px"
      />
      <ScrollView
        showsVerticalScrollIndicator={false}
        testID="SettlementScreen.ScrollView">
        <List.Section>
          <List.Item
            testID="Principles"
            title="Principles"
            right={itemProps => (
              <>
                <IconButton
                  testID="PrincipleResetButton"
                  {...itemProps}
                  icon="sync"
                  onPress={actions.principleReset}
                />
                <IconButton
                  testID="PrincipleRemoveButton"
                  {...itemProps}
                  icon="delete"
                  onPress={actions.principleRemove}
                />
                <IconButton
                  testID="PrincipleSetButton"
                  {...itemProps}
                  icon="plus"
                  onPress={actions.principleSet}
                />
              </>
            )}
...
          <List.Item
            testID="Innovations"
            title="Innovations"
            right={itemProps => (
              <>
                <IconButton
                  testID="InnovationResetButton"
                  {...itemProps}
                  icon="sync"
                  onPress={actions.innovationReset}
                />
                <IconButton
                  testID="InnovationRemoveButton"
                  {...itemProps}
                  icon="delete"
                  onPress={actions.innovationRemove}
                />
                <IconButton
                  testID="InnovationAddButton"
                  {...itemProps}
                  icon="plus"
                  onPress={actions.innovationAdd}
                />
                <IconButton
                  testID="InnovationDrawButton"
                  {...itemProps}
                  icon="star"
                  onPress={actions.innovationDraw}
                />
              </>
            )}
...
            ))}
          </Innovations>
        </List.Section>

        <List.Section>
          <List.Item
            testID="SettlementEvent"
            title="Events"
            description={props.event?.name}
            right={itemProps => (
              <>
                <IconButton
                  testID="SettlementEventDrawButton"
                  {...itemProps}
                  icon="star"
                  onPress={actions.settlementEventDraw}
                />
              </>
            )}
...
          <List.Item
            testID="SettlementLocations"
            title="Locations"
            right={itemProps => (
              <>
                <IconButton
                  testID="LocationResetButton"
                  {...itemProps}
                  icon="sync"
                  onPress={actions.locationReset}
                />
                <IconButton
                  testID="LocationRemoveButton"
                  {...itemProps}
                  icon="delete"
                  onPress={actions.locationRemove}
                />
                <IconButton
                  testID="LocationAddButton"
                  {...itemProps}
                  icon="plus"
                  onPress={actions.locationAdd}
                />
              </>
            )}
...
